vlib/v/checker/tests/int_type_alises_unbounded_err.vv
type Int = int

struct Foo {
	value Int
}

fn take_u8(u u8) {
	println(u)
}

fn main() {
	foo := Foo{
		value: 10000
	}
	take_u8(foo.value)
}
